--- a/public/index.css
+++ b/public/index.css
@@ -199,9 +199,10 @@
 	 max-width: 100%;
 	 display: block;
 	 max-height: 100%;
+   background-color: #ddeefc;
 	 height: 100%;
 	 width: 100%;
-	 object-fit: cover;
+	 object-fit: contain;
 }
  .card-item__cover {
 	 height: 100%;
@@ -278,6 +279,7 @@
 	 max-width: 100%;
 	 object-fit: contain;
 	 max-height: 100%;
+   color: #ced6e0;
 	 object-position: top right;
 }
  .card-item__info {
