--- a/public/index.css
+++ b/public/index.css
@@ -199,7 +199,8 @@
 	 max-width: 100%;
 	 display: block;
 	 max-height: 100%;
-   background-color: #ddeefc;
+   background: rgb(160,234,207);
+   background: linear-gradient(90deg, rgba(160,234,207,1) 32%, rgba(1,72,113,1) 90%);
 	 height: 100%;
 	 width: 100%;
 	 object-fit: contain;
